--- a/index.html
+++ b/index.html
@@ -3,120 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Navbar with Hamburger Menu</title>
+    <title>रिस्पॉन्सिव नेवबार</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom CSS for Navbar */
-        .nav-link {
-            color: #gray-700;
-            text-decoration: none;
-            transition: color 0.3s ease;
-            font-medium;
-        }
-
-        .nav-link:hover {
-            color: #purple-600;
-        }
-
-        .active {
-            color: #purple-600;
-        }
-
-        #hamburger-btn {
-            display: none; /* Hide by default on larger screens */
-            background: none;
-            border: none;
-            color: #gray-700;
-            cursor: pointer;
-            padding: 10px;
-            font-size: 24px;
-            outline: none;
-        }
-
-        #close-menu-btn {
-            background: none;
-            border: none;
-            color: white;
-            cursor: pointer;
-            padding: 10px;
-            font-size: 24px;
-            outline: none;
-        }
-
-        #mobile-menu {
-            display: none; /* Hide by default */
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            z-index: 50;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #mobile-menu-content {
-            background-color: #gray-800;
-            width: 80%;
-            max-width: 320px;
-            height: 100%;
-            position: absolute;
-            right: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-        }
-
-        #mobile-menu nav {
-            display: block;
-        }
-
-        #mobile-menu ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            space-y: 20px;
-        }
-
-        #mobile-menu li {
-            margin-bottom: 0;
-        }
-
-        #mobile-menu a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-
-        #mobile-menu a:hover {
-            color: #purple-300;
-        }
-
-        /* Media query for mobile devices */
-        @media (max-width: 768px) {
-            .hidden {
-                display: none;
-            }
-            .md\:block {
-                display: none !important; /* Hide desktop nav on mobile */
-            }
-
-            #hamburger-btn {
-                display: block; /* Show hamburger button on mobile */
-            }
-
-            #mobile-menu {
-                display: none; /* Will be shown by JS when hamburger is clicked */
-            }
-        }
+        /* Minified and Enhanced CSS for Navbar */
+        .nav-link{color:#6b7280;text-decoration:none;transition:color .3s ease,transform .2s ease;font-medium}.nav-link:hover,.nav-link.active,.nav-link:focus{color:#8b5cf6;transform:scale(1.05)}.nav-link.active{font-weight:700}#hamburger-btn{display:none;background:none;border:none;color:#6b7280;cursor:pointer;padding:10px;font-size:24px;outline:none;transition:opacity .2s ease,transform .2s ease}#hamburger-btn:hover,#hamburger-btn:focus{opacity:.7;transform:scale(1.1);box-shadow:0 0 0 3px rgba(128,0,128,.5)}#close-menu-btn{background:none;border:none;color:#fff;cursor:pointer;padding:10px;font-size:24px;outline:none;transition:opacity .2s ease,transform .2s ease}#close-menu-btn:hover,#close-menu-btn:focus{opacity:.7;transform:scale(1.1)}#mobile-menu{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,.9);z-index:50;align-items:center;justify-content:center;transition:transform .3s ease;transform:translateX(100%)}#mobile-menu.active{transform:translateX(0);display:flex}#mobile-menu-content{background-color:#374151;width:80%;max-width:320px;height:100%;position:absolute;right:0;padding:20px;display:flex;flex-direction:column;align-items:flex-start}#mobile-menu nav{display:block}#mobile-menu ul{list-style:none;padding:0;margin:0;display:flex;flex-direction:column;align-items:flex-start;space-y:20px}#mobile-menu li{margin-bottom:0}#mobile-menu a{color:#fff;text-decoration:none;font-size:18px;font-weight:500;transition:color .3s ease,transform .2s ease}#mobile-menu a:hover,#mobile-menu a:focus{color:#d8b4fe;transform:scale(1.05)}@media (max-width:768px){.hidden{display:none}.md\:block{display:none!important}#hamburger-btn{display:block}#mobile-menu{display:none}}.container{width:100%;margin-left:auto;margin-right:auto;padding-left:1rem;padding-right:1rem}@media (min-width:640px){.container{max-width:640px}}@media (min-width:768px){.container{max-width:768px}}@media (min-width:1024px){.container{max-width:1024px}}@media (min-width:1280px){.container{max-width:1280px}}.page-section{padding-top:4rem;padding-bottom:4rem}#home{padding-top:8rem;padding-bottom:8rem}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border-width:0}.focus\:not-sr-only:focus{clip:auto!important;height:auto!important;margin:0!important;overflow:visible!important;position:static!important;width:auto!important;white-space:normal!important}.service-card{transition:transform .3s ease,box-shadow .3s ease}.service-card:hover{transform:translateY(-10px);box-shadow:0 6px 10px rgba(0,0,0,.15)}.testimonial-card{transition:transform .3s ease,opacity .3s ease;opacity:.8}.testimonial-card.active{transform:translateY(-15px) scale(1.05);opacity:1}.carousel-control{cursor:pointer;position:absolute;top:50%;transform:translateY(-50%);font-size:2rem;color:#8b5cf6;padding:1rem;background:none;border:none;outline:none;transition:color .3s ease,opacity .3s ease,transform .2s ease;opacity:.7}.carousel-control:hover,.carousel-control:focus{color:#d8b4fe;opacity:1;transform:translateY(-50%) scale(1.2)}.carousel-control.prev{left:0}.carousel-control.next{right:0}.pricing-card{transition:transform .3s ease,box-shadow .3s ease}.pricing-card:hover{transform:translateY(-10px);box-shadow:0 6px 10px rgba(0,0,0,.15)}.contact-form button[type=submit]{transition:background-color .3s ease,transform .2s ease}.contact-form button[type=submit]:hover,.contact-form button[type=submit]:focus{background-color:#6d28d9;transform:scale(1.05)}#newsletter-form button[type=submit]{transition:background-color .3s ease,transform .2s ease}#newsletter-form button[type=submit]:hover,#newsletter-form button[type=submit]:focus{background-color:#4c1d95;transform:scale(1.05)}.social-icon{transition:color .3s ease,transform .2s ease}.social-icon:hover,.social-icon:focus{color:#d8b4fe;transform:scale(1.2)}
     </style>
 </head>
 <body class="font-poppins bg-gray-100">
@@ -136,7 +28,7 @@
                     <li><a href="#contact" class="nav-link text-gray-700 hover:text-purple-600 transition duration-300 font-medium">Contact</a></li>
                 </ul>
             </nav>
-            <button id="hamburger-btn" class="md:hidden text-gray-700 focus:outline-none" aria-label="Toggle Navigation">
+            <button id="hamburger-btn" class="md:hidden text-gray-700 focus:outline-none" aria-label="Toggle Navigation" aria-expanded="false">
                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                 </svg>
@@ -153,7 +45,7 @@
                     </svg>
                 </button>
             </div>
-            <nav class="block" role="navigation">
+            <nav role="navigation">
                 <ul class="space-y-4">
                     <li><a href="#home" class="block text-lg text-white hover:text-purple-300 transition duration-300 font-medium">Home</a></li>
                     <li><a href="#services" class="block text-lg text-white hover:text-purple-300 transition duration-300 font-medium">Services</a></li>
@@ -166,10 +58,10 @@
     </div>
 
     <main id="main-content" role="main">
-        <section id="home" class="page-section text-center relative overflow-hidden">
+        <section id="home" class="page-section text-center relative overflow-hidden" aria-label="Home Section">
             <div class="container">
                 <h1 class="text-4xl md:text-6xl font-bold text-white mb-4">
-                    Elevate Your Brand with <span class="text-purple-300">BoostDigital</span>
+                    Elevate Your Brand with <span class="text-purple-300">Boost</span>Digital
                 </h1>
                 <p class="text-lg md:text-xl text-gray-200 mb-8">
                     We are a digital marketing agency dedicated to helping businesses thrive online.
@@ -180,7 +72,7 @@
             </div>
         </section>
 
-        <section id="services" class="page-section">
+        <section id="services" class="page-section" aria-label="Services Section">
             <div class="container">
                 <h2 class="text-3xl font-semibold text-gray-800 text-center mb-12">Our Services</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -221,13 +113,13 @@
             </div>
         </section>
 
-        <section id="testimonials" class="page-section bg-purple-100">
+        <section id="testimonials" class="page-section bg-purple-100" aria-label="Testimonials Section">
             <div class="container">
                 <h2 class="text-3xl font-semibold text-gray-800 text-center mb-12">What Our Clients Say</h2>
                  <div class="carousel">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner" aria-live="polite">
                         <div class="carousel-item">
-                            <div class="testimonial-card rounded-lg p-6 fade-in">
+                            <div class="testimonial-card rounded-lg p-6 fade-in active">
                                 <p class="text-gray-700 mb-4 italic">
                                     "BoostDigital transformed our online presence. Their strategies are effective and their team is a pleasure to work with."
                                 </p>
@@ -251,13 +143,13 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control prev">❮</button>
-                    <button class="carousel-control next">❯</button>
+                    <button class="carousel-control prev" aria-label="Previous Slide">❮</button>
+                    <button class="carousel-control next" aria-label="Next Slide">❯</button>
                 </div>
             </div>
         </section>
 
-        <section id="pricing" class="page-section bg-gray-100">
+        <section id="pricing" class="page-section bg-gray-100" aria-label="Pricing Plans Section">
             <div class="container">
                 <h2 class="text-3xl font-semibold text-gray-800 text-center mb-12">Our Pricing Plans</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -307,40 +199,21 @@
             </div>
         </section>
 
-        <section id="contact" class="page-section">
+        <section id="contact" class="page-section" aria-label="Contact Us Section">
             <div class="container">
                 <h2 class="text-3xl font-semibold text-gray-800 text-center mb-12">Contact Us</h2>
                 <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6 fade-in">
                     <form id="contact-form" class="contact-form space-y-4">
                         <div>
                             <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Name:</label>
-                            <input type="text" id="name" name="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Name" required>
+                            <input type="text" id="name" name="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Name" required aria-required="true">
                             <p id="name-error" class="text-red-500 text-xs italic mt-1"></p>
                         </div>
                         <div>
                             <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email:</label>
-                            <input type="email" id="email" name="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Email" required>
+                            <input type="email" id="email" name="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Email" required aria-required="true">
                             <p id="email-error" class="text-red-500 text-xs italic mt-1"></p>
                         </div>
                         <div>
                             <label for="message" class="block text-gray-700 text-sm font-bold mb-2">Message:</label>
-                            <textarea id="message" name="message" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-32 resize-y" placeholder="Your Message" required></textarea>
-                            <p id="message-error" class="text-red-500 text-xs italic mt-1"></p>
-                        </div>
-                        <button type="submit" class="bg-purple-500 hover:bg-purple-700 text-white font-semibold py-2 px-6 rounded-full transition duration-300 focus:outline-none focus:shadow-outline">
-                            Send Message
-                        </button>
-                        <p id="form-message" class="text-green-500 text-center font-semibold mt-4"></p>
-                    </form>
-                </div>
-            </div>
-        </section>
-
-        <section class="bg-purple-500 py-12 fade-in">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="text-2xl font-semibold text-white mb-4">Subscribe to Our Newsletter</h2>
-                    <p class="text-gray-200 mb-6">Stay updated with the latest digital marketing trends and news.</p>
-                    <form id="newsletter-form" class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <input type="email" id="newsletter-email" name="newsletter-email" class="w-full sm:w-auto max-w-md py-2 px-4 rounded-full text-gray-700 focus:outline-none focus:shadow-outline" placeholder="Enter your email" required>
-                        <button type="submit" class="bg-indigo-500 hover:bg-indigo-600 text-white font-semibold py-2 px-6 rounded-full transition duration-300 focus:outline-
+                            <textarea id="message" name="message" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-32 resize-y" placeholder="Your Message" required aria-required=
